[package]
name = "reference-browser-gnome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1

[dependencies]
adw = { version = "0.4.1", package = "libadwaita", features = ["v1_3"] }
gtk = { version = "0.6.6", package = "gtk4", features = ["v4_10"] }
reqwest = { version = "0.11.17", default-features = false, features = ["blocking", "rustls-tls"] }

[build-dependencies]
glib-build-tools = "0.17.0"
