[package]
name = "reference-browser-gnome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1

[dependencies]
adw = { version = "0.4.1", package = "libadwaita", features = ["v1_3"] }
gtk = { version = "0.6.6", package = "gtk4", features = ["v4_10"] }
reqwest = { version = "0.11.17", default-features = false, features = ["blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
humantime = "2.1.0"
email_address = "0.2.4"
tuple = "0.5.1"
once_cell = "1.0"
serde = "1.0.181"
serde_json = "1.0.104"
humantime-serde = "1.1.1"
base64 = "0.21.2"

[build-dependencies]
glib-build-tools = "0.17.0"
